update to new schema, increment version to 0.0.2
